Refactor `SdsFilter` for readabilty (#353)
* Moved SSP Header names into `HeaderConstants`.
* Refactor `SdsFilterTest` to use headers from `HeaderConstants`
* Renamed method to better reflect their usage.
* Refactor code to use more modern switch with pattern matching to improve readability.
* Refactor `extractOdsCode` to fluent methods.
* Refactor `appendSspHeaderWhenAbsent` to handle the header array values better by using `getFirst` on the HttpHeader object.